--- a/style.css
+++ b/style.css
@@ -76,6 +76,9 @@ background: linear-gradient(90deg, rgba(244,240,240,1) 30%, rgba(255,255,255,1) 
     .custom-text{
         font-size: 2em;
     }
+    .carousel{
+        width: 100%;
+    }
     #carousel{
         display: flex;
         flex-direction: column;
