--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 *{
     font-family: "Cabin", sans-serif;
-    /* cursor: none; */
+    cursor: crosshair;
 }
 
 .custom-background{
@@ -98,14 +98,14 @@ background: linear-gradient(90deg, rgba(244,240,240,1) 30%, rgba(255,255,255,1) 
 }
 #mouse{
     position: absolute;
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
     
-    border: 1px solid red;
-    border-radius: 20px;
-    transform: translate(-50%,-350%);
-    box-shadow: 3px 3px 20px 3px red;
-    
+    border: 1px solid yellow;
+    border-radius: 30px;
+    transform: translate(-50%,-450%);
+    box-shadow: 3px 3px 20px 3px yellow;
+    transition: 0.15s;
     pointer-events: none;
     z-index: 3;
 
